import javax.swing.JPanel;

public class MyPanel extends JPanel{
	
}