@startuml
class Shoe {
    -ArrayList<CardDecorator> shoe
    +Shoe()
    +getNextCard()
    +printShoe()
    +setShoe()
}

class Card {
    +Card(int, int)
    +Print()
    +getImagePath()
    -int suit
    -int val
}

class Simulation {
    +Deal()
    +reset()

}

class EventHandler {
    +HandleBet()
}

class MyPanel {
    +MyPanel()
}

class Runner {
	+main()
}

Shoe o-- Card
MyPanel --> Simulation
Simulation --> Shoe : controls
Simulation --> EventHandler
Runner o-- MyPanel
@enduml